[package]
name = "p2ptest"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.54.1", features = [ "tokio", "gossipsub", "dns", "identify", "kad", "macros", "noise", "ping", "pnet", "tcp", "websocket", "yamux" ] }
tokio = { version = "*", features = ["rt-multi-thread", "macros", "io-std"] }
async-trait = "0.1"
either = "1.12"
futures = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = [ "env-filter" ] }
